# dbctl

./: .gitignore  .goreleaser.yml  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  go.work  golangci.yaml  main.go
.github/workflows/: ci.yaml  publish_docker.yaml  release.yml  tag.yaml  tag_go_sdk.yaml
clients/dbctlgo/: client.go  client_test.go  go.mod  options.go
clients/golang/: client.go  client_test.go  go.mod  go.sum  options.go
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/src/dbctl/: dbctl.py  options.py
clients/python/src/tests/: test_dbctl.py
cmd/: api.go  list.go  pg.go  root.go  selfupdate.go  start.go  stop.go  version.go
cmd/describe/: describe.go  pg.go
cmd/start/: mongo.go  pg.go  redis.go  start.go
cmd/testing/: api.go  start.go
dd/: main.go
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/getting-started/: postgres.md  redis.md
docs/overview/: install.md
docs/reference/: cli.md  labels.md  manage.md
docs/testing/: golang.md  overview.md
internal/apiserver/: container.go  server.go
internal/cmd/: context.go  down.go  list.go  pg.go  redis.go  root.go  selfupdate.go  start.go  stop.go  up.go  utils.go  version.go
internal/container/: container.go  docker_rest.go  docker_rest_test.go  models.go
internal/database/: database.go
internal/logger/: logger.go
internal/pg/: config.go  pg.go
internal/pkg/: context.go
internal/ports/: http.go  models.go
internal/redis/: config.go  redis.go
internal/selfupdate/: selfupdate.go  (+1 more)
pg/: config.go  pg.go
(+16 files in other folders)
