[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbctl"
version = "0.1.0"
authors = [
  { name="Mohsen Mirzakhani", email="mohsen.mkh88@gmail.com" },
]
description = "DBCTL testing client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'certifi==2023.7.22',
  'charset-normalizer==3.3.0',
  'idna==3.4',
  'requests==2.31.0',
  'urllib3==2.0.7',
]

[project.urls]
"Homepage" = "https://github.com/mirzakhany/dbctl"
"Bug Tracker" = "https://github.com/mirzakhany/dbctl/issues"
